# semantic-slam-yolov8

./: .gitignore  README.md
data/: benchmark_data.json  fig02_kitti_trajectory.json  fig03_euroc_trajectory.json  fig04_yolov8_detection.json  fig05_ablation_study.json  fig06_timing_analysis.json  fig07_sota_comparison.json  fig08_qualitative_analysis.json  fig09_failure_analysis.json  fig10_parameter_sensitivity.json
semantic-slam-experiment/: LICENSE  README.md  autodl_deploy.sh  requirements.txt
semantic-slam-experiment/data/datasets/TUM/: 1.txt
semantic-slam-experiment/data/detections/euroc_mh01easy/: 000000.json  000001.json  000002.json  000003.json  000004.json  000005.json  000006.json  000007.json  000008.json  000009.json  000010.json  000011.json  000012.json  000013.json  000014.json  000015.json  000016.json  000017.json  000018.json  000019.json  000020.json  000021.json  000022.json  000023.json  000024.json  000025.json  000026.json  000027.json  000028.json  000029.json  000030.json  000031.json  000032.json  000033.json  000034.json  000035.json  000036.json  000037.json  000038.json  000039.json  (+3643 more)
semantic-slam-experiment/data/detections/euroc_mh03medium/: 000000.json  000001.json  000002.json  000003.json  000004.json  000005.json  000006.json  000007.json  000008.json  000009.json  000010.json  000011.json  000012.json  000013.json  000014.json  000015.json  000016.json  000017.json  000018.json  000019.json  000020.json  000021.json  000022.json  000023.json  000024.json  000025.json  000026.json  000027.json  000028.json  000029.json  000030.json  000031.json  000032.json  000033.json  000034.json  000035.json  000036.json  000037.json  000038.json  000039.json  (+2661 more)
semantic-slam-experiment/data/detections/euroc_mh05difficult/: 000000.json  000001.json  000002.json  000003.json  000004.json  000005.json  000006.json  000007.json  000008.json  000009.json  000010.json  000011.json  000012.json  000013.json  000014.json  000015.json  000016.json  000017.json  000018.json  000019.json  000020.json  000021.json  000022.json  000023.json  000024.json  000025.json  000026.json  000027.json  000028.json  000029.json  000030.json  000031.json  000032.json  000033.json  000034.json  000035.json  000036.json  000037.json  000038.json  000039.json  (+2234 more)
semantic-slam-experiment/data/detections/kitti_00/: 000000.json  000001.json  000002.json  000003.json  000004.json  000005.json  000006.json  000007.json  000008.json  000009.json  000010.json  000011.json  000012.json  000013.json  000014.json  000015.json  000016.json  000017.json  000018.json  000019.json  000020.json  000021.json  000022.json  000023.json  000024.json  000025.json  000026.json  000027.json  000028.json  000029.json  000030.json  000031.json  000032.json  (+4508 more)
semantic-slam-experiment/output/: baseline_euroc_mh_01_easy.txt  baseline_kitti00.txt  baseline_tum_half.txt  baseline_tum_sitting_static.txt  baseline_tum_sitting_xyz.txt  baseline_tum_walking_static.txt  baseline_tum_xyz.txt  euroc_MH_01_easy_trajectory.txt  euroc_MH_03_medium_trajectory.txt  mask_euroc_mh_03_medium.txt  mask_euroc_mh_05_difficult.txt  mask_kitti00.txt  mask_tum_sitting_static.txt  mask_tum_sitting_xyz.txt  mask_tum_walking_half.txt  mask_tum_walking_static.txt  mask_tum_walking_xyz.txt  rgbd_dataset_freiburg3_walking_halfsphere_trajectory.txt  rgbd_dataset_freiburg3_walking_xyz_trajectory.txt  yolo_euroc_mh_05_difficult.txt
semantic-slam-experiment/output/failure_analysis/: failure_summary.json  failure_summary.txt
semantic-slam-experiment/output/parameter_sweep/: TUM3_sweep.yaml  parameter_sensitivity.json  rgbd_dataset_freiburg3_walking_xyz_trajectory.txt  sweep_dynamic.txt  sweep_orb.txt  sweep_semantic.txt  tum_dyn_0.3_traj.txt  tum_dyn_0.4_traj.txt  tum_dyn_0.5_traj.txt  tum_dyn_0.6_traj.txt  tum_dyn_0.7_traj.txt  tum_orb_1000_traj.txt  tum_orb_1200_traj.txt  tum_orb_1500_traj.txt  tum_orb_2000_traj.txt  tum_orb_500_traj.txt  tum_orb_800_traj.txt  tum_semw_0.0_traj.txt  tum_semw_0.2_traj.txt  tum_semw_0.4_traj.txt  tum_semw_0.5_traj.txt  tum_semw_0.8_traj.txt  tum_semw_1.0_traj.txt
semantic-slam-experiment/output/timing_logs/: timing_summary.json
semantic-slam-experiment/patches/: patch_orbslam3.py
semantic-slam-experiment/scripts/: associate.py  generate_planb_report.py  mask_dataset.py  offline_semantic_validation.py  yolov8_offline_inference.py
semantic-slam-experiment/src/: CMakeLists.txt
semantic-slam-experiment/src/benchmark/: ablation_runner.cc  benchmark_main.cc  benchmark_utils.h  euroc_benchmark.cc  kitti_benchmark.cc  tum_benchmark.cc
semantic-slam-experiment/src/config/: EuRoC_baseline.yaml  EuRoC_geoconst.yaml  EuRoC_semantic.yaml  EuRoC_yolo_only.yaml  KITTI00_baseline.yaml  KITTI00_geoconst.yaml  KITTI00_semantic.yaml  KITTI00_yolo_only.yaml  TUM1_semantic.yaml  TUM3_baseline.yaml  TUM3_geoconst.yaml  TUM3_semantic.yaml  TUM3_yolo_only.yaml
semantic-slam-experiment/src/include/: DynamicFeatureFilter.h  ORBSLAM3Patch.h  SemanticSLAM.h  SemanticWeights.h  YoloDetector.h
semantic-slam-experiment/src/scripts/: build.bat  build.sh  export_model.sh
semantic-slam-experiment/src/src/: DynamicFeatureFilter.cc  SemanticSLAM.cc  SemanticWeights.cc  YoloDetector.cc
semantic-slam-experiment/src/tests/: CMakeLists.txt  test_dynamic_filter.cc  test_integration.cc  test_semantic_weights.cc  test_utils.h  test_yolo_detector.cc
semantic-slam-figures/: README.md
semantic-slam-figures/data/: experiment_results.json
semantic-slam-figures/output/tables/: table1_tum_ate_results.csv  table2_kitti_ate_results.csv  table3_ablation_study.csv  table4_timing_profiling.csv  table5_failure_analysis.csv  table6_parameter_sensitivity.csv
semantic-slam-figures/src/: generate_figures.py  generate_tables.py
src/: common.py  fig01_system_architecture.py  fig02_kitti_trajectory.py  fig03_euroc_trajectory.py  fig04_yolov8_detection.py  fig05_ablation_study.py  fig06_timing_analysis.py  fig07_sota_comparison.py  fig08_qualitative_analysis.py  fig09_failure_analysis.py  fig10_parameter_sensitivity.py  generate_all.py
(+4642 files in other folders)
